GNOME Bugzilla – Bug 766726
sigsegv in XGetDeviceProperty
Last modified: 2016-05-30 16:50:16 UTC
Using current gnome-3-20 code, the wacom plugin segfaults when using the libinput test-touchpad-tap binary gsd-test-wacom gdb backtrace "#0 0xb7e1acdf in XGetDeviceProperty () at /usr/lib/i386-linux-gnu/libXi.so.6
+ Trace 236270
gsd-wacom-manager has a few calls to open_device() which use the result without checking if it's NULL which can happen if the device goes away while configured
Created attachment 328442 [details] [review] wacom: don't segfault when a device is removed while being configured
Review of attachment 328442 [details] [review]: Please commit to master, gnome-3-20 and gnome-3-18
master https://git.gnome.org/browse/gnome-settings-daemon/commit/?id=c1ed4c04 gnome-3-20 https://git.gnome.org/browse/gnome-settings-daemon/commit/?h=gnome-3-20&id=40bf4fdce gnome-3-18 https://git.gnome.org/browse/gnome-settings-daemon/commit/?h=gnome-3-18&id=9c8a5970