wacom: don't segfault when a device is removed while being configured

Calls to open_device can return null, don't try to configure the device
in those cases, it only leads to segfaults

https://bugzilla.gnome.org/show_bug.cgi?id=766726